<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mycart.MyCartFragment"
    android:background="#F5F5F5">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#F5F5F5"
        tools:ignore="MissingConstraints">

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:id="@+id/collapsingToolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fitsSystemWindows="true"
        app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

    </com.google.android.material.appbar.CollapsingToolbarLayout>

    <ImageButton
        android:id="@+id/filter_btn"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_gravity="right"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/bottom_detail"
        android:src="@drawable/loc" />

        <ImageButton
            android:id="@+id/filter_btn2"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_gravity="left|bottom"
            android:layout_marginStart="16dp"
            android:layout_marginTop="-35dp"
            android:background="@drawable/bottom_navigation_blue"
            android:src="@drawable/st"
            app:layout_scrollEffect="@null"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:layout_marginTop="-25dp"
            android:fontFamily="@font/mark_pro"
            android:textSize="15sp"
            android:textColor="@color/title"
            android:layout_marginEnd="70dp"
            android:text="@string/title_loc" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/title"
        style="@style/GeneralTitleBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        android:text="@string/my_cart"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main.appbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomAppBar"
        android:layout_width="415dp"
        android:layout_height="507dp"
        android:layout_gravity="bottom"
        android:background="@drawable/container_shape_my_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="BottomAppBar,MissingConstraints">


        <Button
            android:id="@+id/done_btn"
            style="@style/ButtonGeneral"
            android:layout_width="330dp"
            android:layout_height="48dp"
            android:layout_marginStart="29dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="48dp"
            android:text="@string/btn_checkout"
            android:textAllCaps="false"
            app:backgroundTint="@null"
            app:backgroundTintMode="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/delivery"
            app:layout_constraintVertical_bias="0.958" />

        <TextView
            android:id="@+id/total"
            style="@style/TextMyCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="60dp"
            android:text="@string/total"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView1" />

        <TextView
            android:id="@+id/delivery"
            style="@style/TextMyCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/delivery"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/delivery_free"
            app:layout_constraintHorizontal_bias="0.037"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView1"
            android:layout_width="369dp"
            android:layout_height="231dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="52dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/price_total"
            style="@style/TextMyCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="TextView1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.833"
            app:layout_constraintStart_toEndOf="@+id/total"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView1" />

        <TextView
            android:id="@+id/delivery_free"
            style="@style/TextMyCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="44dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price_total"
            app:layout_constraintVertical_bias="0.004" />

        <androidx.constraintlayout.widget.Barrier
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            tools:layout_editor_absoluteX="163dp"
            tools:layout_editor_absoluteY="355dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        tools:layout_editor_absoluteX="262dp"
        tools:layout_editor_absoluteY="104dp" />

</androidx.constraintlayout.widget.ConstraintLayout>